--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <button class="selection" id="scissors">✌</button>
       </div>
       <div class="results">
-        <div class="player">
-            You<span class="player" id="myScore"> 0</span>
+        <div class="player-container">
+          <div class="player">You<span class="player" id="myScore"> 0</span></div>
+          <div class="your-output"></div>
         </div>
-        <div class="player">
-          Computer<span class="player" id="computerScore"> 0</span>
+        <div class="player-container">
+          <div class="player">Computer<span class="player" id="computerScore"> 0</span></div>
+          <div class="computer-output"></div>
         </div>
-       
       </div>
     </div>
   </body>
