feat: :zap: Increment Score
Your and Computer Score Increments

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="results">
         <div class="player-container">
-          <div class="player">You<span class="player" id="myScore"> 0</span></div>
+          <div class="player">You<span class="player" id="yourScore"> 0</span></div>
           <div class="your-output"></div>
         </div>
         <div class="player-container">
