feat: :memo: Add div for emoji
Emojis are not in column - put them in divs

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="results">
         <div class="player-container">
           <div class="player">You<span class="player" id="yourScore"> 0</span></div>
-          <div class="your-output"></div>
+          <div class="your-output output"></div>
         </div>
         <div class="player-container">
           <div class="player">Computer<span class="player" id="computerScore"> 0</span></div>
-          <div class="computer-output"></div>
+          <div class="computer-output output"></div>
         </div>
       </div>
     </div>
