--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
       </div>
       <div class="results">
         <div class="player-container">
-          <div class="player">You<span class="player" id="yourScore"> 0</span></div>
+          <div class="player">You <span class="player" id="yourScore"> 0</span></div>
           <div class="your-output output"></div>
         </div>
         <div class="player-container">
-          <div class="player">Computer<span class="player" id="computerScore"> 0</span></div>
+          <div class="player">Computer <span class="player" id="computerScore"> 0</span></div>
           <div class="computer-output output"></div>
         </div>
       </div>
+      <button class="new-round-button hidden" >New Round</button>
     </div>
   </body>
 </html>
