feat: :zap: Modal
Added an ugly looking modal.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
           <div class="computer-output output"></div>
         </div>
       </div>
-      <button class="new-round-button hidden" >New Round</button>
+    
+    </div>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <p class="game-over-text"></p> 
+        <button class="new-round-button" >New Round</button>
+      </div>
     </div>
   </body>
 </html>
